# Banking-AI-Chatbot

./: .env.example  .gitignore  README.md  pyproject.toml  users_info.csv
src/: chatbot.py  chatbot_conversation_database.py  config.py  custom_exceptions.py  employe_database.py  log.py  prompt.py  schema.py  test.py  tools.py  utility.py
stories/: credit_card.txt  loan.txt
